# storage/api-docs/api-docs.json
@@ -4,8 +4,8 @@
         "title": "My Rest API",
         "description": "Laravel project to practice developing Rest API with L5 Swagger OpenApi",
         "contact": {
-            "name": "Evelline UKRIDA",
-            "email": "evelline.kristiani@ukrida.ac.id"
+            "name": "Bryan UKRIDA",
+            "email": "Bryan.422021003@civitas.ukrida.ac.id"
         },
         "version": "1.0",
         "x-logo": {
@@ -29,10 +29,10 @@
                                 "$ref": "#/components/schemas/User"
                             },
                             "example": {
-                                "name": "Augusta Ada Byron",
-                                "email": "ada.lovelace@gmail.com",
-                                "password": "Ba88a93$",
-                                "password_confirmation": "Ba88a93$123"
+                                "name": "Bryan Ronaldo",
+                                "email": "manchesterunited@gmail.com",
+                                "password": "bryan123",
+                                "password_confirmation": "bryan123"
                             }
                         }
                     }
@@ -228,13 +228,13 @@
                                 "$ref": "#/components/schemas/Book"
                             },
                             "example": {
-                                "title": "Eating Clean",
-                                "author": "Inge Tumiwa-Bachrens",
-                                "publisher": "Kawan Pustaka",
+                                "title": "Crewneck Hitam Zara",
+                                "author": "Crewneck",
+                                "publisher": "Zara",
                                 "publication_year": "2016",
-                                "cover": "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/book/1482170055i/33511107.jpg",
-                                "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu ‘sehat’ bagi tubuh kita.",
-                                "price": 85000
+                                "cover": "https://static.zara.net/assets/public/55d3/13ac/378942d0b260/336016118b28/03854405814-p/03854405814-p.jpg?ts=1707483468461&w=563",
+                                "description": "Pakaian ini memiliki tampilan unik yang disebabkan proses pencucian khusus. Karena itu, warnanya mungkin sedikit berbeda dibandingkan dengan foto..",
+                                "price": 2300000
                             }
                         }
                     }
@@ -471,9 +471,9 @@
                 "scheme": "https",
                 "flows": {
                     "password": {
-                        "authorizationUrl": "http://127.0.0.1:8001/oauth/authorize",
-                        "tokenUrl": "http://127.0.0.1:8001/oauth/token",
-                        "refreshUrl": "http://127.0.0.1:8001/token/refresh",
+                        "authorizationUrl": "http://localhost/oauth/authorize",
+                        "tokenUrl": "http://localhost/oauth/token",
+                        "refreshUrl": "http://localhost/token/refresh",
                         "scopes": []
                     }
                 }
